--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,20 @@
   margin: 12px;
   border-radius: 4px;
 }
+
+.cluster-classification {
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  font-weight: bold;
+  color: #000;
+}
+.debug-species-codes {
+  padding: 12px;
+  color: #000;
+  font-family: monospace;
+  z-index: 1;
+  border-radius: 4px;
+}
