--- a/src/App.css
+++ b/src/App.css
@@ -183,3 +183,106 @@ button:disabled {
   background-color: rgb(240, 240, 240);
   color: rgb(200, 200, 200);
 }
+
+input[type="checkbox"] {
+  /* Add if not using autoprefixer */
+  -webkit-appearance: none;
+  /* Remove most all native input styles */
+  appearance: none;
+  /* For iOS < 15 */
+  background-color: rgb(250, 250, 251);
+  /* Not removed via appearance */
+  margin: 0;
+
+  font: inherit;
+  color: rgb(250, 250, 251);
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid rgb(120, 120, 133);
+  border-radius: 0.15em;
+  transform: translateY(-0.075em);
+
+  display: grid;
+  place-content: center;
+}
+
+input[type="checkbox"]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+  transform: scale(0);
+  transform-origin: bottom left;
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em rgba(45, 57, 77, 0.95);
+  /* Windows High Contrast Mode */
+  background-color: rgba(45, 57, 77, 0.95);
+}
+
+input[type="checkbox"]:checked::before {
+  transform: scale(1);
+}
+
+input[type="checkbox"]:focus {
+  outline: max(2px, 0.15em) solid rgb(250, 250, 251);
+  outline-offset: max(2px, 0.15em);
+}
+
+input[type="radio"] {
+  /* Add if not using autoprefixer */
+  -webkit-appearance: none;
+  /* Remove most all native input styles */
+  appearance: none;
+  /* For iOS < 15 */
+  background-color: var(--form-background);
+  /* Not removed via appearance */
+  margin: 0;
+
+  font: inherit;
+  color: rgb(250, 250, 251);
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid rgb(250, 250, 251);
+  border-radius: 50%;
+  transform: translateY(-0.075em); 
+
+  display: grid;
+  place-content: center;
+}
+
+input[type="radio"]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  /* Windows High Contrast Mode */
+  background-color: rgb(250, 250, 251);
+}
+
+input[type="radio"]:checked::before {
+  transform: scale(1);
+}
+
+form {
+  display: flex;
+}
+
+.form-control {
+  font-family: system-ui, sans-serif;
+  font-size: 2rem;
+  font-weight: bold;
+  line-height: 1.1;
+  display: grid;
+  grid-template-columns: 1em auto;
+  gap: 0.5em;
+}
+
+.form-control + .form-control {
+  margin-top: 1em;
+}
+
+.form-control:focus-within {
+  color: var(--form-control-color);
+}
